pwm_backlight: Add MODULE_DEPEND on backlight

Make the pwm_backlight module depend on backlight, so it
has access to the backlight interface symbols.  Otherwise you'll
get an error like:

link_elf: symbol backlight_get_info_desc undefined

Approved by:	re (gjb)
Signed-off-by: Brett Mastbergen <brett.mastbergen@gmail.com>
MFC after:	3 days
PR: 		253765
(cherry picked from commit 43d4dfac96f7f8285a27989f315c075d28aadb12)
(cherry picked from commit 135fa1610fa177bb8c77aab951cfb4395edc249f)