sys/dev/pwm/pwm_backlight.c
@@ -308,4 +308,5 @@ devclass_t pwm_backlight_devclass;
 
 DRIVER_MODULE(pwm_backlight, simplebus, pwm_backlight_driver,
     pwm_backlight_devclass, 0, 0);
+MODULE_DEPEND(pwm_backlight, backlight, 1, 1, 1);
 OFWBUS_PNP_INFO(compat_data);
